# DartScorer-Voices

./: .gitignore  ChangeLog  Makefile.am  README.md  build.sh  check.sh  configure.ac  install.sh  makedeb.sh
voices/: Makefile.am
